<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <!--<ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="centerCrop"
        android:alpha="0.5" />-->

    <!-- Título en la parte superior -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/oscuro" />

    <!-- LinearLayout con fondo transparente -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@android:color/transparent"> <!-- Fondo transparente -->

        <Button
            android:id="@+id/btn_gestionar_ejercicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:onClick="onClick"
            android:backgroundTint="@color/oscuro"
            android:textColor="@color/white"
            android:text="@string/str_gestionar_ejercicio" />

        <Button
            android:id="@+id/btn_gestionar_rutina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:onClick="onClick"
            android:backgroundTint="@color/oscuro"
            android:textColor="@color/white"
            android:text="@string/str_gestionar_rutina" />

        <Button
            android:id="@+id/btn_gestionar_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:onClick="onClick"
            android:backgroundTint="@color/oscuro"
            android:textColor="@color/white"
            android:text="@string/str_gestionar_cliente" />

        <Button
            android:id="@+id/btn_gestionar_objetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:onClick="onClick"
            android:backgroundTint="@color/oscuro"
            android:textColor="@color/white"
            android:text="@string/str_gestionar_objetivo" />

        <Button
            android:id="@+id/btn_gestionar_cronograma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="18dp"
            android:onClick="onClick"
            android:backgroundTint="@color/oscuro"
            android:textColor="@color/white"
            android:text="@string/str_gestionar_cronograma" />

    </LinearLayout>

</RelativeLayout>
