<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.PObjetivo">

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_gestionar_objetivo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_nombre_objetivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Objetivo para realizar el ejercicio"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <!-- Botones para guardar, actualizar y eliminar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/btn_insertar_objetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/btn_insertar"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_modificar_objetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/btn_modificar"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_borrar_objetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/btn_borrar"
            android:gravity="center"/>
    </LinearLayout>

    <!-- Lista de ítems -->
    <ListView
        android:id="@+id/lv_items_objetivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:gravity="center"/>

</LinearLayout>