<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.PCronograma">

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_gestionar_cronograma"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/et_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Fecha"
        android:focusable="false"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/spinner_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/spinner_rutina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btn_insertar_cronograma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_insertar"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_modificar_cronograma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_modificar"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_borrar_cronograma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_borrar"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

    <Button
        android:id="@+id/btn_enviar_rutina_cronograma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="Enviar Rutina"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_enviar_ejercicios_cronograma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="Enviar Ejemplos"
        android:gravity="center"/>

    </LinearLayout>

    <!-- Botones para exportar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btn_exportar_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Exportar PDF"
            android:gravity="center"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btn_exportar_json"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="Exportar JSON"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_exportar_csv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Exportar CSV"
            android:gravity="center" />
    </LinearLayout>


    <!-- Lista de ítems -->
    <ListView
        android:id="@+id/lv_items_cronograma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:layout_marginTop="16dp"
        android:gravity="center"/>

</LinearLayout>