<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.PCliente">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_gestionar_cliente"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_nombre_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nombre"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_apellido_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Apellido"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_celular_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Celular"
        android:layout_marginBottom="16dp"
        android:gravity="center" />

    <Spinner
        android:id="@+id/spinner_objetivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/et_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Descripcion (opcional)"
            android:inputType="text"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btn_agregar_objetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Agregar"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_sacar_objetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Sacar"
            android:gravity="center"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_items_objetivo_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btn_insertar_cliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_insertar"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_modificar_cliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_modificar"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_borrar_cliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_borrar"
            android:gravity="center"/>
    </LinearLayout>

    <!-- Lista de ítems -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <ListView
            android:id="@+id/lv_items_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:layout_marginTop="16dp"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>