<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.PRutina">

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_gestionar_rutina"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Campo de texto para el nombre -->
    <EditText
        android:id="@+id/et_nombre_rutina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nombre de la Rutina"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <!-- Selector de ejercicio y campo de texto -->
    <Spinner
        android:id="@+id/spinner_ejercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <!-- Campos de texto para Cantidad de Serie, Repeticiones y Reposo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_cantidad_serie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Serie"
                android:inputType="number"
                android:gravity="center"/>

            <EditText
                android:id="@+id/et_cantidad_repeticion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Repeticion"
                android:inputType="number"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/et_reposo_entre_serie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Reposo"
                android:inputType="number"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btn_agregar_ejercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Agregar"
                android:gravity="center"/>

            <Button
                android:id="@+id/btn_sacar_ejercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Sacar"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Lista de ítems -->
    <ListView
        android:id="@+id/lv_items_rutina_ejercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <!-- Botones para guardar, actualizar y eliminar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btn_insertar_rutina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_insertar"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_modificar_rutina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_modificar"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_borrar_rutina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_borrar"
            android:gravity="center"/>
    </LinearLayout>

    <!-- Lista de ítems -->
    <ListView
        android:id="@+id/lv_items_rutina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:layout_marginTop="16dp"
        android:gravity="center"/>

</LinearLayout>